--- a/propertyinspector/kef.html
+++ b/propertyinspector/kef.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>KEF</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/jquery.min.js"></script>
 </head>
 
 <body>
@@ -38,12 +39,9 @@
 
         <div class="sdpi-item status">
             <div class="sdpi-item-label">DEBUG</div>
-            <input class="sdpi-item-value" id="Address" value=""
-                onchange="sendValueToPlugin(event.target.value, 'address')">
+            <input class="sdpi-item-value" id="Address" value="">
         </div>
     </div>
     <script src="js/kef.js" defer></script>
 </body>
-<script src="js/jquery.min.js"></script>
-
 </html>
