fix for jquery and forgot app.js haha

--- a/propertyinspector/kef.html
+++ b/propertyinspector/kef.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>KEF</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/jquery.min.js"></script>
+    
 </head>
 
 <body>
@@ -39,9 +39,10 @@
 
         <div class="sdpi-item status">
             <div class="sdpi-item-label">DEBUG</div>
-            <input class="sdpi-item-value" id="Address" value="">
+            <input class="sdpi-item-value" id="debug" value="">
         </div>
     </div>
-    <script src="js/kef.js" defer></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/kef.js" defer></script>
 </body>
 </html>
